--- a/src/app/pages/demography/demography.component.html
+++ b/src/app/pages/demography/demography.component.html
@@ -1,5 +1,5 @@
 <div class="">
     <div class="">
-        <app-gubanitarian></app-gubanitarian>
+        <app-gubanitarian [election]="election$ | async"></app-gubanitarian>
     </div>
 </div>
