--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,11 +1,12 @@
-<div class="wrapper">
+<!--<div class="wrapper">
     <div class="wrapper_action election" routerLink="./constitutions" routerLinkActive="app-a_active"> Constitution</div>
     <div class="wrapper_action form" routerLink="./elections" routerLinkActive="app-a_active"> Election</div>
     <div class="wrapper_action election" routerLink="./localgovernments" routerLinkActive="app-a_active"> Local Govenment</div>
     <div class="wrapper_action form" routerLink="./partys" routerLinkActive="app-a_active"> Party</div>
     <div class="wrapper_action form" routerLink="./states" routerLinkActive="app-a_active"> State</div>
     <div class="wrapper_action form" routerLink="./candidates" routerLinkActive="app-a_active"> Candidate</div>
-</div>
+    <div class="wrapper_action form" routerLink="./votetable" routerLinkActive="app-a_active"> Vote Table</div>
+</div>-->
 
 
 <div class="container">
