--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -22,6 +22,15 @@
             color: $primary-dark;
             margin-top: 5px;  
             cursor: pointer;
-        }        
+        }      
+        
+        
+    }
+}
+
+@media screen and (min-width:218px) and (max-width: 912px){
+    
+    .text-same{
+        display: none;
     }
 }
