--- a/src/app/shared/controls/table/table.component.html
+++ b/src/app/shared/controls/table/table.component.html
@@ -5,9 +5,9 @@
                 <td mat-cell *matCellDef="let element; let i = index" data-label="#">{{i+1}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="photoUrl">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Photo</th>
-                <td mat-cell *matCellDef="let element">{{element.photoUrl}}</td>
+            <ng-container matColumnDef="party">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Party</th>
+                <td mat-cell *matCellDef="let element">{{element.party}}</td>
             </ng-container>
 
             <ng-container matColumnDef="name">
@@ -15,9 +15,9 @@
                 <td mat-cell *matCellDef="let element">{{element.name}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="position">
+            <ng-container matColumnDef="positions">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Position</th>
-                <td mat-cell *matCellDef="let element">{{element.position}}</td>
+                <td mat-cell *matCellDef="let element">{{element.positions}}</td>
             </ng-container>
 
             <ng-container matColumnDef="count">
