--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,17 @@
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "styles/main";
 
-body{
-    height: 100% !important;
-}
+
+
+/*CSS RULE TO USE ICON  */
+@font-face {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+    src: local('Material Icons'),
+      local('MaterialIcons-Regular'),
+      url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+      url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+      url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+  }
