--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,9 +8,11 @@
 @import "layout";
 @import "vendor";
 
+@import "icon";
+
 html,
 body {
-    height: 100%;
+    height: 100% !important;
     width: 100%;
     margin: 0;
     font-family: $base-font-family;
