--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -50,7 +50,8 @@
         }
 
         &__center{
-            width: 70%;
+            width: 80%;
+            padding-bottom: 30px !important;
         }
     }
 }
