--- a/src/app/pages/profile/form/form.component.scss
+++ b/src/app/pages/profile/form/form.component.scss
@@ -4,6 +4,7 @@
 
 @media screen and (max-width: 540px) {
     .app-page {
+        width: 100px;
 
         &__content{
             font-size: 10px;
