--- a/src/app/pages/reports/components/report/report.component.html
+++ b/src/app/pages/reports/components/report/report.component.html
@@ -1,4 +1,4 @@
 <div class="app-page">
-    Report
+    <h3 style="text-align: center;">Report</h3>
     <app-table [dataSource]='election?.result.itemInterfaces'></app-table>
 </div>
