--- a/src/app/pages/settings/candidates/components/candidate/candidate.component.scss
+++ b/src/app/pages/settings/candidates/components/candidate/candidate.component.scss
@@ -6,3 +6,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 540px) {
+    .candidate{
+        padding: 5px;
+    }
+}
