--- a/src/app/pages/settings/states/components/form/form.component.html
+++ b/src/app/pages/settings/states/components/form/form.component.html
@@ -4,6 +4,8 @@
             <app-input formControlName="name"></app-input>
         </app-form-field>
     
-        <app-button type="submit">Save</app-button>
+        <div class="form__actions">
+            <app-button type="submit">Save</app-button>
+        </div>
     </form>
 </div>
