--- a/src/app/pages/results/component/result/result.component.html
+++ b/src/app/pages/results/component/result/result.component.html
@@ -5,7 +5,7 @@
             <p>Position: <span style="color:rgb(138, 136, 134);">{{cand.positions}}</span></p>
         </div>
         <div>
-            <p>Voted Count: <span style="color:violet">{{cand.count }}</span></p>
+            <p>Votes: <span style="color:violet">{{cand.count }}</span></p>
         </div>
     </div>
 </div>
