--- a/src/app/pages/results/component/result/result.component.scss
+++ b/src/app/pages/results/component/result/result.component.scss
@@ -9,3 +9,20 @@
         justify-content: space-between;
     }
 }
+
+@media screen and (max-width: 370px) {
+    .results{
+        &__content{
+            padding: 5px;
+        }
+    }
+}
+
+@media screen and (min-width: 370px) and (max-width: 540px) {
+    .results{
+        &__content{
+            padding: 10px;
+        }
+        
+    }
+}
