--- a/src/app/pages/results/results.component.scss
+++ b/src/app/pages/results/results.component.scss
@@ -1,8 +1,17 @@
 
 
-@media screen and (max-width: 540px) {
+
+@media screen and (max-width: 370px) {
     .app-page{
         font-size: 10px;
         padding: 5px;
-    }    
+    }
 }
+
+@media screen and (min-width: 370px) and (max-width: 540px) {
+    .app-page{
+        font-size: 10px;
+        padding: 10px;
+    }
+}
+
