--- a/src/app/pages/settings/constitutions/components/constitution/constitution.component.scss
+++ b/src/app/pages/settings/constitutions/components/constitution/constitution.component.scss
@@ -7,3 +7,15 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 370px) {
+    .constitution{
+        padding: 4px;
+    }
+}
+
+@media screen and (min-width: 370px) and (max-width: 540px) {
+    .constitution{
+        padding: 5px;
+    }
+}
