--- a/src/app/pages/settings/locals/components/local/local.component.scss
+++ b/src/app/pages/settings/locals/components/local/local.component.scss
@@ -6,3 +6,15 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 370px) {
+    .local{
+        padding: 4px;
+    }
+}
+
+@media screen and (min-width: 370px) and (max-width: 540px) {
+    .local{
+        padding: 5px;
+    }
+}
