--- a/src/app/pages/settings/states/components/state/state.component.scss
+++ b/src/app/pages/settings/states/components/state/state.component.scss
@@ -6,3 +6,15 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 370px) {
+    .states{
+        padding: 4px;
+    }
+}
+
+@media screen and (min-width: 370px) and (max-width: 540px) {
+    .states{
+        padding: 5px;
+    }
+}
