--- a/src/app/shared/controls/table/table.component.html
+++ b/src/app/shared/controls/table/table.component.html
@@ -1,30 +1,30 @@
 
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
-            <ng-container matColumnDef="#">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">#</th>
-                <td mat-cell *matCellDef="let element; let i = index" data-label="#">{{i+1}}</td>
-            </ng-container>
+    <mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+        <ng-container matColumnDef="#">
+            <mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">#</mat-header-cell>
+            <mat-cell *matCellDef="let element; let i = index" data-label="#">{{i+1}}</mat-cell>
+        </ng-container>
 
-            <ng-container matColumnDef="party">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Party</th>
-                <td mat-cell *matCellDef="let element">{{element.party}}</td>
-            </ng-container>
+        <ng-container matColumnDef="party">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Party</mat-header-cell>
+            <mat-cell *matCellDef="let element">{{element.party}}</mat-cell>
+        </ng-container>
 
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                <td mat-cell *matCellDef="let element">{{element.name}}</td>
-            </ng-container>
+        <ng-container matColumnDef="name">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+            <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+        </ng-container>
 
-            <ng-container matColumnDef="positions">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Position</th>
-                <td mat-cell *matCellDef="let element">{{element.positions}}</td>
-            </ng-container>
+        <ng-container matColumnDef="positions">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Position</mat-header-cell>
+            <mat-cell *matCellDef="let element">{{element.positions}}</mat-cell>
+        </ng-container>
 
-            <ng-container matColumnDef="count">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by count">Votes</th>
-                <td mat-cell *matCellDef="let element">{{element.count}}</td>
-            </ng-container>
+        <ng-container matColumnDef="count">
+            <mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by count">Votes</mat-header-cell>
+            <mat-cell *matCellDef="let element">{{element.count}}</mat-cell>
+        </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
