--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,7 @@
 <div class="header">
     <div class="header__title" routerLink="/">Electoral</div>
-    <div class="header__navigation">
-        <div *ngIf="isAuthorized && isProfileCompleted$ | async">
-            <a class="app-a" (click)="onProfileNavigate()">Profile</a>
-            <a class="app-a" (click)="onSignout()">Sign Out</a>
-        </div>        
+    <div class="header__navigation" *ngIf="isAuthorized">
+            <a *ngIf="isProfileCompleted$ | async" class="app-a" (click)="onProfileNavigate()">Profile</a>
+            <a class="app-a" (click)="onSignout()">Sign Out</a>               
     </div>
 </div>
