--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -22,6 +22,7 @@
     }
 
     &__center{       
+        padding-bottom: 20px;
 
         &-top{
             border-radius: 8px;
@@ -51,7 +52,7 @@
 
         &__center{
             width: 80%;
-            padding-bottom: 30px !important;
+            //padding-bottom: 30px !important;
         }
     }
 }
