--- a/src/app/pages/demography/components/gubanitarian/gubanitarian.component.scss
+++ b/src/app/pages/demography/components/gubanitarian/gubanitarian.component.scss
@@ -23,7 +23,7 @@
                 
         span{
             color: green;
-            //font-size: 12px;
+            font-size: 13px;
             font-weight: bold;
         }
     }
